Add details card for the contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -82,6 +82,29 @@
             <article class="card">
               <div class="card-body">
                 <h3>Details</h3>
+                <div class="contact-item">
+                  <p class="contact-label">Email</p>
+                  <div class="contact-email">
+                    <a href="mailto:maya.chen.dev@example.com">maya.chen.dev@example.com</a>
+                    <button type="button" class="btn ghost small">Copy</button>
+                  </div>
+                </div>
+                <div class="contact-item">
+                  <p class="contact-label">Location</p>
+                  <p class="contact-info">Seoul, South Korea (GMT+9)</p>
+                </div>
+                <div class="contact-item">
+                  <p class="contact-label">Availability</p>
+                  <p class="contact-info">Weekdays 10:00–18:00</p>
+                </div>
+                <hr class="divider" />
+                <h4>What helps</h4>
+                <ul class="help-list">
+                  <li>Role / project scope</li>
+                  <li>Timeline and constraint</li>
+                  <li>Links to specs or examples</li>
+                </ul>
+                <a href="index.html" class="btn">Back to Portfolio</a>
               </div>
             </article>
           </div>
