--- a/public/contact.html
+++ b/public/contact.html
@@ -95,7 +95,7 @@
                 </div>
                 <div class="contact-item">
                   <p class="contact-label">Availability</p>
-                  <p class="contact-info">Weekdays 10:00–18:00</p>
+                  <p class="contact-info">Weekdays 10:00-18:00</p>
                 </div>
                 <hr class="divider" />
                 <h4>What helps</h4>
