--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,8 @@
             </p>
 
             <div class="hero-options">
-              <a href="#" class="btn primary">View projects</a>
-              <a href="#" class="btn">Get in touch</a>
+              <a href="#projects" class="btn primary">View projects</a>
+              <a href="contact.html" class="btn">Get in touch</a>
               <button class="btn ghost" type="button">Copy email</button>
             </div>
 
