--- a/public/contact.html
+++ b/public/contact.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Portfolio website for Maya Chen, Software Engineer." />
     <meta name="author" content="Maya Chen" />
     <link rel="stylesheet" href="../css/styles.css" />
+    <script src="../js/theme.js"></script>
     <title>Contact - Maya Chen</title>
   </head>
   <body>
@@ -26,16 +27,16 @@
             <div class="nav-toggle-bar"></div>
           </button>
           <ul class="nav-list">
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="index.html#projects">Projects</a></li>
+            <li><a href="index.html#skills">Skills</a></li>
+            <li><a href="index.html#about">About</a></li>
             <li><a href="./contact.html" class="btn small">Contact</a></li>
           </ul>
         </nav>
 
         <!-- Theme button -->
         <div class="header-action">
-          <button class="btn small ghost">Light</button>
+          <button id="theme-toggle" class="btn small ghost">Light</button>
         </div>
       </div>
     </header>
@@ -116,5 +117,6 @@
         <p class="muted small">&copy; 2026 Maya Chen.</p>
       </div>
     </footer>
+    <script src="../js/main.js"></script>
   </body>
 </html>
