Fix youtube video link

--- a/public/index.html
+++ b/public/index.html
@@ -109,15 +109,15 @@
                 <span class="dot"></span>
                 <span class="demo-title">Product Demo</span>
               </div>
-              <!-- src="https://www.youtube.com/embed/CKSBlLFdtlI" -->
-              <!-- <iframe
-                src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ"
+              <iframe
+                src="https://www.youtube.com/embed/CKSBlLFdtlI"
                 title="Demo Video"
+                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
                 loading="lazy"
                 class="demo-video"
-              ></iframe> -->
+              ></iframe>
               <p class="muted small demo-footer">Sample embedded video for layout demonstration.</p>
             </div>
           </article>
