--- a/public/contact.html
+++ b/public/contact.html
@@ -23,10 +23,10 @@
 
         <!-- Navigation -->
         <nav class="site-nav">
-          <button class="nav-toggle" type="button">
+          <button id="nav-toggle" class="nav-toggle" type="button">
             <div class="nav-toggle-bar"></div>
           </button>
-          <ul class="nav-list">
+          <ul id="nav-list" class="nav-list">
             <li><a href="index.html#projects">Projects</a></li>
             <li><a href="index.html#skills">Skills</a></li>
             <li><a href="index.html#about">About</a></li>
