Add copy email button functionality

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
             <div class="hero-options">
               <a href="#projects" class="btn primary">View projects</a>
               <a href="contact.html" class="btn">Get in touch</a>
-              <button class="btn ghost" type="button">Copy email</button>
+              <button id="copy-email" class="btn ghost" type="button" data-email="maya.chen.dev@example.com">Copy email</button>
             </div>
 
             <ul class="metric-grid">
