Add toast notification for email copy feedback

--- a/public/index.html
+++ b/public/index.html
@@ -311,6 +311,9 @@
         <p class="muted small">&copy; 2026 Maya Chen. Built with plain HTML, CSS, and a little JavaScript.</p>
       </div>
     </footer>
+
+    <div id="toast" class="toast" hidden>Hello, World!</div>
+
     <script src="../js/main.js"></script>
   </body>
 </html>
