Add email copy toast to the contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -87,7 +87,7 @@
                   <p class="contact-label">Email</p>
                   <div class="contact-email">
                     <a href="mailto:maya.chen.dev@example.com">maya.chen.dev@example.com</a>
-                    <button type="button" class="btn ghost small">Copy</button>
+                    <button id="copy-email" type="button" class="btn ghost small">Copy</button>
                   </div>
                 </div>
                 <div class="contact-item">
@@ -117,6 +117,9 @@
         <p class="muted small">&copy; 2026 Maya Chen.</p>
       </div>
     </footer>
+
+    <div id="toast" class="toast" hidden></div>
+
     <script src="../js/main.js"></script>
   </body>
 </html>
