--- a/public/index.html
+++ b/public/index.html
@@ -312,7 +312,7 @@
       </div>
     </footer>
 
-    <div id="toast" class="toast" hidden>Hello, World!</div>
+    <div id="toast" class="toast" hidden></div>
 
     <script src="../js/main.js"></script>
   </body>
