--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
           <div class="toolbar">
             <label class="field">
               <span class="field-label">Search</span>
-              <input name="project-search" type="text" placeholder="e.g. dashboard, performance, a11y" />
+              <input id="project-search" name="project-search" type="text" placeholder="e.g. dashboard, performance, a11y" />
             </label>
 
             <label class="field">
@@ -152,7 +152,7 @@
             <button class="btn small" type="button">Clear</button>
           </div>
 
-          <div class="card-grid">
+          <div id="project-grid" class="card-grid">
             <article class="card">
               <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=80" alt="PulseBoard Analytics" />
               <div class="card-body">
