--- a/public/index.html
+++ b/public/index.html
@@ -153,7 +153,8 @@
           </div>
 
           <div id="project-grid" class="card-grid">
-            <article class="card">
+            <!-- Project 1 -->
+            <article class="card" data-tags="frontend performance">
               <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=80" alt="PulseBoard Analytics" />
               <div class="card-body">
                 <h3>PulseBoard Analytics</h3>
@@ -170,7 +171,9 @@
                 <a href="contact.html" class="btn small ghost">Ask for a walkthrough</a>
               </div>
             </article>
-            <article class="card">
+
+            <!-- Project 2 -->
+            <article class="card" data-tags="accessibility frontend">
               <img src="https://images.unsplash.com/photo-1522542550221-31fd19575a2d?auto=format&fit=crop&w=1200&q=80" alt="Northwind UI Kit" />
               <div class="card-body">
                 <h3>Northwind UI Kit</h3>
@@ -187,7 +190,9 @@
                 <a href="contact.html" class="btn small ghost">Request docs</a>
               </div>
             </article>
-            <article class="card">
+
+            <!-- Project 3 -->
+            <article class="card" data-tags="data performance">
               <img src="https://images.unsplash.com/photo-1555949963-aa79dcee981c?auto=format&fit=crop&w=1200&q=80" alt="Streamline ETL Monitor" />
               <div class="card-body">
                 <h3>Streamline ETL Monitor</h3>
