Add project search by tags and clear button functionality

--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,7 @@
               </select>
             </label>
 
-            <button class="btn small" type="button">Clear</button>
+            <button id="toolbar-clear" class="btn small" type="button">Clear</button>
           </div>
 
           <div id="project-grid" class="card-grid">
