Add no match warning for the project filter

--- a/public/index.html
+++ b/public/index.html
@@ -210,6 +210,9 @@
               </div>
             </article>
           </div>
+
+          <!-- Activated when no project is selected from the toolbar -->
+          <p id="empty-project-warn">No projects match your filters.</p>
         </div>
       </section>
 
