Refactor main.js into common functionality and page-specific scripts

--- a/public/contact.html
+++ b/public/contact.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Maya Chen" />
     <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/theme.js"></script>
+    <script src="../js/common.js" defer></script>
     <title>Contact - Maya Chen</title>
   </head>
   <body>
@@ -119,7 +120,5 @@
     </footer>
 
     <div id="toast" class="toast" hidden></div>
-
-    <script src="../js/main.js"></script>
   </body>
 </html>
