--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Maya Chen" />
     <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/theme.js"></script>
+    <script src="../js/common.js" defer></script>
+    <script src="../js/index.js" defer></script>
     <title>Maya Chen - Software Engineer</title>
   </head>
   <body>
@@ -320,8 +322,7 @@
       </div>
     </footer>
 
+    <!-- Short-lived notification message -->
     <div id="toast" class="toast" hidden></div>
-
-    <script src="../js/main.js"></script>
   </body>
 </html>
