Add form result element to the contact form

--- a/public/contact.html
+++ b/public/contact.html
@@ -79,6 +79,7 @@
                     <input type="reset" class="btn"></input>
                   </div>
                 </form>
+                <div id="form-result" class="form-result muted">Lorem Ipsum</div>
               </div>
             </article>
 
