--- a/public/contact.html
+++ b/public/contact.html
@@ -79,7 +79,7 @@
                     <input type="reset" class="btn"></input>
                   </div>
                 </form>
-                <div id="form-result" class="form-result muted">Lorem Ipsum</div>
+                <div id="form-result" class="form-result muted">Please fix the highlighted fields and try again.</div>
               </div>
             </article>
 
