Fix not copying email in the contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -90,7 +90,7 @@
                   <p class="contact-label">Email</p>
                   <div class="contact-email">
                     <a href="mailto:maya.chen.dev@example.com">maya.chen.dev@example.com</a>
-                    <button id="copy-email" type="button" class="btn ghost small">Copy</button>
+                    <button id="copy-email" type="button" class="btn ghost small" data-email="maya.chen.dev@example.com">Copy</button>
                   </div>
                 </div>
                 <div class="contact-item">
