--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Portfolio website for Maya Chen, Software Engineer." />
     <meta name="author" content="Maya Chen" />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <script src="../js/theme.js"></script>
-    <script src="../js/common.js" defer></script>
-    <script src="../js/contact.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/theme.js"></script>
+    <script src="js/common.js" defer></script>
+    <script src="js/contact.js" defer></script>
     <title>Contact - Maya Chen</title>
   </head>
   <body>
@@ -32,7 +32,7 @@
             <li><a href="index.html#projects">Projects</a></li>
             <li><a href="index.html#skills">Skills</a></li>
             <li><a href="index.html#about">About</a></li>
-            <li><a href="./contact.html" class="btn small">Contact</a></li>
+            <li><a href="contact.html" class="btn small">Contact</a></li>
           </ul>
         </nav>
 
