--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Portfolio website for Maya Chen, Software Engineer." />
     <meta name="author" content="Maya Chen" />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <script src="../js/theme.js"></script>
-    <script src="../js/common.js" defer></script>
-    <script src="../js/index.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/theme.js"></script>
+    <script src="js/common.js" defer></script>
+    <script src="js/index.js" defer></script>
     <title>Maya Chen - Software Engineer</title>
   </head>
   <body>
@@ -32,7 +32,7 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="./contact.html" class="btn small">Contact</a></li>
+            <li><a href="contact.html" class="btn small">Contact</a></li>
           </ul>
         </nav>
 
