--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
       <div class="content-wrapper site-header-inner">
         <!-- Branding -->
         <a href="index.html" class="branding">
-          <div class="logo">
+          <div class="logo" aria-hidden="true">
             <span class="author">MC</span>
           </div>
           <span class="author">Maya Chen</span>
         </a>
 
         <!-- Navigation -->
-        <nav class="site-nav">
-          <button id="nav-toggle" class="nav-toggle" type="button">
+        <nav class="site-nav" aria-label="Main navigation">
+          <button id="nav-toggle" class="nav-toggle" type="button" aria-expanded="false" aria-controls="nav-list">
             <div class="nav-toggle-bar"></div>
           </button>
           <ul id="nav-list" class="nav-list">
@@ -323,6 +323,6 @@
     </footer>
 
     <!-- Short-lived notification message -->
-    <div id="toast" class="toast" hidden></div>
+    <div id="toast" class="toast" hidden aria-live="polite"></div>
   </body>
 </html>
